# todos-cli

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  context.md
.github/: copilot-instructions.md
docs/: commands.md
src/: lib.rs  main.rs  todos.rs
templates/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  header.md
