[package]
name = "todos-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
clap = { version = "4.5.48", features = ["derive"] }
tera = { version = "1.20.0", default-features = false, features = ["preserve_order"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 'z'